# votecastbench

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  RESULTS.md  pyproject.toml
configs/: models.json
data/: README.md  labels.jsonl  manifest.json  questions.jsonl
data/expansion/: README.md  api-lineage.json  audit-report.json  audit-sample.json  curation-summary.json  labels-500.jsonl  manual-audit.json  questions-500.jsonl  selection.json
data/non-may-89/: api-lineage.json  audit-report.json  labels.jsonl  questions.jsonl  selection.json
results/ablation/: predictions.jsonl  scores.json
results/baselines/: predictions.jsonl  scores.json
results/combined-589/: README.md  RESULTS.md  manifest.json  scores.json  uncertainty.json
results/combined-589/baselines/: scores.json
results/fresh-500/: README.md  RESULTS.md  manifest.json  scores.json  uncertainty.json
results/full/: predictions.jsonl  scores.json
results/non-may-89/: README.md  RESULTS.md  manifest.json  scores.json  uncertainty.json
results/panel/: manifest.json  predictions.jsonl  scores.json  uncertainty.json
scripts/: audit_expansion.py  bootstrap_uncertainty.py  combine_jsonl.py  curate.py  curate_expansion.py  curate_non_may.py  render_fresh_results.py
src/votecastbench/: __init__.py  baselines.py  cli.py  env.py  io.py  panel.py  prompting.py  provenance.py  providers.py  runner.py  schemas.py  scoring.py  uncertainty.py  validation.py
tests/: test_baselines.py  test_curated_data.py  test_panel.py  test_runner.py  test_scoring.py  test_uncertainty.py  test_validation.py
(+4 files in other folders)
