[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "votecastbench"
version = "0.1.0"
description = "A leakage-controlled benchmark for post-cutoff UK election forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Jaeho Lee"}]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
votecastbench = "votecastbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/votecastbench"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

